--- a/guest_spring_thymeleaf/src/main/resources/templates/guest_modify_form.html
+++ b/guest_spring_thymeleaf/src/main/resources/templates/guest_modify_form.html
@@ -52,34 +52,30 @@
 						bgcolor="BBBBBB">
 						<tr>
 							<td width=100 align=center bgcolor="E6ECDE" height="22">번호</td>
-							<td align="left" width=490 bgcolor="ffffff"
-								style="padding-left: 10px" th:text="*{guest_no}">206</td>
+							<td align="left" width=490 bgcolor="ffffff" style="padding-left: 10px" th:text="*{guest_no}">206
+							</td>
 						</tr>
 						<tr>
 							<td width=100 align=center bgcolor="E6ECDE" height="22">이름</td>
-							<td align="left" width=490 bgcolor="ffffff"
-								style="padding-left: 10px"><input type="text"
-								style="width: 150" name="guest_name" value="이름"
-								th:value="*{guest_name}"></td>
+							<td align="left" width=490 bgcolor="ffffff" style="padding-left: 10px">
+								<input type="text" style="width: 150" name="guest_name" value="이름" th:value="*{guest_name}">
+							</td>
 						</tr>
 						<tr>
 							<td width=100 align=center bgcolor="E6ECDE" height="22">홈페이지</td>
-							<td align="left" width=490 bgcolor="ffffff"
-								style="padding-left: 10px"><input type="text"
-								style="width: 150" name="guest_homepage" value="홈페이지"
-								th:value="*{guest_homepage}"></td>
+							<td align="left" width=490 bgcolor="ffffff" style="padding-left: 10px">
+								<input type="text" style="width: 150" name="guest_homepage" value="홈페이지" th:value="*{guest_homepage}">
+							</td>
 						</tr>
 						<tr>
 							<td width=100 align=center bgcolor="E6ECDE" height="22">이메일</td>
-							<td align="left" width=490 bgcolor="ffffff"
-								style="padding-left: 10px"><input type="text"
-								style="width: 240" name="guest_email" value="이메일"
-								th:value="*{guest_email}"></td>
+							<td align="left" width=490 bgcolor="ffffff" style="padding-left: 10px">
+								<input type="text" style="width: 240" name="guest_email" value="이메일" th:value="*{guest_email}">
+							</td>
 						</tr>
 						<tr>
 							<td width=100 align=center bgcolor="E6ECDE" height="22">제목</td>
-							<td align="left" width=490 bgcolor="ffffff"
-								style="padding-left: 10px">
+							<td align="left" width=490 bgcolor="ffffff" style="padding-left: 10px">
 								<input type="text" style="width: 240" name="guest_title" value="제목" th:value="*{guest_title}">
 							</td>
 						</tr>
