--- a/user_spring_thymeleaf/src/main/resources/templates/include_common_bottom.html
+++ b/user_spring_thymeleaf/src/main/resources/templates/include_common_bottom.html
@@ -1,2 +1,8 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<div th:fragment="include_common_bottom">
+
 	<p align="center">Copyright (&copy;) By Kimkyoungho.[김경호] All
 		rights reserved.</p>
+</div>
