--- a/user_spring_thymeleaf/src/main/resources/templates/include_common_left.html
+++ b/user_spring_thymeleaf/src/main/resources/templates/include_common_left.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<div th:fragment="include_common_left">
 	<p>
 		<strong>메뉴</strong>
 	</p>
 	<ul>
 
-		<li><a href=''>guard1 님</a></li>
+		<li><a href='' th:text="${session.sUserId}">guard1 님</a></li>
 		<li><a href='user_view'>내정보</a></li>
 		<li><a href="user_logout_action">로그아웃</a></li>
 	</ul>
+</div>
