--- a/user_spring_thymeleaf/src/main/resources/templates/include_common_top.html
+++ b/user_spring_thymeleaf/src/main/resources/templates/include_common_top.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<div th:fragment="include_common_top">
+
 <h1>
-	<a href="">user spring thymeleaf</a>
+	<a href="user_main">user spring thymeleaf</a>
 </h1>
+</div>
