--- a/user_spring_thymeleaf/src/main/resources/templates/user_write_form.html
+++ b/user_spring_thymeleaf/src/main/resources/templates/user_write_form.html
@@ -1,9 +1,5 @@
-
-
-
-    
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>사용자 관리</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -57,36 +53,25 @@
 	<!-- container start-->
 	<div id="container">
 		<!-- header start -->
-		<div id="header">
+		<div id="header" th:include="include_common_top::include_common_top">
 			<!-- include_common_top.jsp start-->
-			
-    
-<h1>
-	<a href="">user spring</a>
-</h1>
 
 			<!-- include_common_top.jsp end-->
 		</div>
 		<!-- header end -->
 		<!-- navigation start-->
-		<div id="navigation">
-			<!-- include_common_left.jsp start-->
-			
- 
-   
-<p>
-	<strong>메뉴</strong>
-</p>
-<ul>
+		<th:block th:if="${session.sUserId == null}">
+			<div id="navigation" th:include="include_common_left_logout::include_common_left_logout">
+			</div>
+		</th:block>
 		
-	
-		<li><a href="user_login_form">로그인</a></li>
-		<li><a href="user_write_form">회원가입</a></li>
-	
-</ul>
+		<th:block th:if="${session.sUserId != null}">
+			<div id="navigation" th:include="include_common_left::include_common_left">
+			</div>
+		</th:block>
+			<!-- include_common_left.jsp start-->
 
 			<!-- include_common_left.jsp end-->
-		</div>
 		<!-- navigation end-->
 		<!-- wrapper start -->
 		<div id="wrapper">
@@ -163,12 +148,9 @@
 			<!-- content end -->
 		</div>
 		<!--wrapper end-->
-		<div id="footer">
+		<div id="footer" th:include="include_common_bottom::include_common_bottom">
 			<!-- include_common_bottom.jsp start-->
-			
-	<p align="center">Copyright (&copy;) By Kimkyoungho.[김경호] All
-		rights reserved.</p>
-
+		
 			<!-- include_common_bottom.jsp end-->
 		</div>
 	</div>
