--- a/user_spring_thymeleaf/src/main/resources/templates/include_common_left_logout.html
+++ b/user_spring_thymeleaf/src/main/resources/templates/include_common_left_logout.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<div th:fragment="include_common_left_logout">
 <p>
 	<strong>메뉴</strong>
 </p>
@@ -8,3 +12,4 @@
 		<li><a href="user_write_form">회원가입</a></li>
 	
 </ul>
+</div>
