--- a/user_spring_thymeleaf/src/main/resources/templates/user_view.html
+++ b/user_spring_thymeleaf/src/main/resources/templates/user_view.html
@@ -1,9 +1,5 @@
-
-
-
-  
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>사용자 관리</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -29,38 +25,26 @@
 	<!-- container start-->
 	<div id="container">
 		<!-- header start -->
-		<div id="header">
+		<div id="header" th:include="include_common_top::include_common_top">
 			<!-- include_common_top.jsp start-->
 			
-
-    
-<h1>
-	<a href="">user spring</a>
-</h1>
-
-			<!-- include_common_top.jsp end-->
+		<!-- include_common_top.jsp end-->
 		</div>
 		<!-- header end -->
 		<!-- navigation start-->
-		<div id="navigation">
-			<!-- include_common_left.jsp start-->
-			
- 
-   
-<p>
-	<strong>메뉴</strong>
-</p>
-<ul>
-	
-		<li><a href=''>guard1 님</a></li>
-		<li><a href='user_view'>내정보</a></li>
-		<li><a href="user_logout_action">로그아웃</a></li>
+		<th:block th:if="${session.sUserId == null}">
+			<div id="navigation" th:include="include_common_left_logout::include_common_left_logout">
+			</div>
+		</th:block>
 		
-	
-</ul>
+		<th:block th:if="${session.sUserId != null}">
+			<div id="navigation" th:include="include_common_left::include_common_left">
+			</div>
+		</th:block>
+			<!-- include_common_left.jsp start-->
 
 			<!-- include_common_left.jsp end-->
-		</div>
+		
 		<!-- navigation end-->
 		<!-- wrapper start -->
 		<div id="wrapper">
@@ -79,27 +63,27 @@
 											- 사용자 정보보기</b></td>
 								</tr>
 							</table> <!-- view Form  -->
-							<form name="f" method="post">
+							<form name="f" method="post" th:object="${loginUser}">
 								<input type="hidden" name="userId" value="guard" />
 								<table border="0" cellpadding="0" cellspacing="1" width="590"
 									bgcolor="BBBBBB">
 									<tr>
 										<td width=100 align=center bgcolor="E6ECDE" height="22">사용자
 											아이디</td>
-										<td width=490 bgcolor="ffffff" style="padding-left: 10">
+										<td width=490 bgcolor="ffffff" style="padding-left: 10" th:text="*{userId}">
 											guard1
 										</td>
 									</tr>
 									<tr>
 										<td width=100 align=center bgcolor="E6ECDE" height="22">이름</td>
-										<td width=490 bgcolor="ffffff" style="padding-left: 10">
+										<td width=490 bgcolor="ffffff" style="padding-left: 10" th:text="*{name}">
 											가이드1
 										</td>
 									</tr>
 									<tr>
 										<td width=100 align=center bgcolor="E6ECDE" height="22">이메일
 											주소</td>
-										<td width=490 bgcolor="ffffff" style="padding-left: 10">
+										<td width=490 bgcolor="ffffff" style="padding-left: 10" th:text="*{email}">
 											guard1@gmail.com
 										</td>
 									</tr>
@@ -121,11 +105,8 @@
 			<!-- content end -->
 		</div>
 		<!--wrapper end-->
-		<div id="footer">
+		<div id="footer" th:include="include_common_bottom::include_common_bottom">
 			<!-- include_common_bottom.jsp start-->
-			
-	<p align="center">Copyright (&copy;) By Kimkyoungho.[김경호] All
-		rights reserved.</p>
 
 			<!-- include_common_bottom.jsp end-->
 		</div>
