--- a/user_spring_thymeleaf/src/main/resources/templates/user_login_form.html
+++ b/user_spring_thymeleaf/src/main/resources/templates/user_login_form.html
@@ -69,7 +69,7 @@
 											- 로그인</b></td>
 								</tr>
 							</table> <!-- login Form  -->
-							<form name="f" method="post">
+							<form name="f" method="post"  th:object="${fuser!=null ? fuser:new com.itwill.user.User()}">
 								<table border="0" cellpadding="0" cellspacing="1"
 									bgcolor="BBBBBB">
 									<tr>
@@ -77,13 +77,13 @@
 											아이디</td>
 										<td width=490 align="left" bgcolor="ffffff"
 											style="padding-left: 10px"><input type="text"
-											style="width: 150" name="userId" value="">&nbsp;&nbsp;<font color="red"></font></td>
+											style="width: 150" name="userId" value="" th:value="*{userId}"    th:text="${msg1}">&nbsp;&nbsp;<font color="red"></font></td>
 									</tr>
 									<tr>
 										<td width=100 align=center bgcolor="E6ECDE" height="22">비밀번호</td>
 										<td width=490 align="left" bgcolor="ffffff"
 											style="padding-left: 10px"><input type="password"
-											style="width: 150" name="password" value="">&nbsp;&nbsp;<font color="red"></font></td>
+											style="width: 150" name="password" value="" th:value="*{password}" th:text="${msg2}">&nbsp;&nbsp;<font color="red"></font></td>
 									</tr>
 								</table>
 							</form> <br />
